style: styling Improved

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
   <div class="photobooth">
     <div class="controls">
-      <button id="take-photo-btn">Take Photo</button>
+      <button id="take-photo-btn" class="btn-primary">Take Photo</button>
       <h1>Filters:</h1>
-      <button id="red-filter">Red Effect</button>
-      <button id="rgb-split" >RGB Split</button>
-      <button id="greenScreen">Green Screen</button>
+      <button id="red-filter" class="btn-primary" >Red Effect</button>
+      <button id="rgb-split" class="btn-primary" >RGB Split</button>
+      <button id="greenScreen" class="btn-primary" >Green Screen</button>
       <div class="rgb rgb-hide">
         <label for="rmin">Red Min:</label>
         <input type="range" min=0 max=255 name="rmin">
